@@ -14,7 +14,7 @@ surfacesincludedir = $(pkgincludedir)/surfaces
 
 noinst_LTLIBRARIES = libsurfaces.la
 
-libsurfaces_la_SOURCES = components.cpp crushandcut.cpp filters.cpp flavours.cpp links.cpp ndisc.cpp nnormalsurface.cpp nnormalsurfacelist.cpp nprism.cpp nsanstandard.cpp nsquad.cpp nsquadoct.cpp nsstandard.cpp nsurfacefilter.cpp nsurfaceset.cpp nsurfacesubset.cpp nxmlfilterreader.cpp nxmlfilterreaders.cpp nxmlsurfacereader.cpp orientable.cpp quadtostd.cpp sfcombination.cpp sfproperties.cpp spheres.cpp stdtoquad.cpp
+libsurfaces_la_SOURCES = components.cpp crushandcut.cpp filters.cpp flavours.cpp links.cpp ndisc.cpp ndisctype.cpp nnormalsurface.cpp nnormalsurfacelist.cpp nprism.cpp nsanstandard.cpp nsquad.cpp nsquadoct.cpp nsstandard.cpp nsurfacefilter.cpp nsurfaceset.cpp nsurfacesubset.cpp nxmlfilterreader.cpp nxmlfilterreaders.cpp nxmlsurfacereader.cpp orientable.cpp quadtostd.cpp sfcombination.cpp sfproperties.cpp spheres.cpp stdtoquad.cpp
 
-surfacesinclude_HEADERS = filterregistry.h flavourregistry.h ndisc.h nnormalsurface.h nnormalsurfacelist.h normalspec.tcc nprism.h nsanstandard.h nsmirrored.h nsquad.h nsquadoct.h nsstandard.h nsurfacefilter.h nsurfaceset.h nsurfacesubset.h nxmlfilterreader.h nxmlsurfacereader.h sfcombination.h sfproperties.h
+surfacesinclude_HEADERS = filterregistry.h flavourregistry.h ndisc.h ndisctype.h nnormalsurface.h nnormalsurfacelist.h normalspec.tcc nprism.h nsanstandard.h nsmirrored.h nsquad.h nsquadoct.h nsstandard.h nsurfacefilter.h nsurfaceset.h nsurfacesubset.h nxmlfilterreader.h nxmlsurfacereader.h sfcombination.h sfproperties.h
 
