@@ -18,6 +18,8 @@ Version 4.6  [ (under development) ]
             - Removed findAllCompletions(), which (as the documentation
               points out) is an empty shell of a routine that has never been
               implemented and quite possibly never will.
+        Class NDiscType:
+            - New class for specifying a normal or almost normal disc type.
         Class NDoubleDescription, NDoubleDescriptor:
             - The old NDoubleDescriptor class has been renamed, and is now
               called NDoubleDescription.  This is merely for consistency
@@ -73,6 +75,8 @@ Version 4.6  [ (under development) ]
             - New routine sameSurface() for comparing two normal surfaces.
             - New routines locallyCompatible() and disjoint() for testing
               intersections between normal surfaces.
+            - New routine getOctPosition() for locating the non-zero
+              octagonal coordinate in an almost normal surface.
             - New routine rawVector() that gives direct read-only access to
               the underlying vector in case this is needed.
             - Removed canCrush() and knownCanCrush(), which are both
